<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView_instructions"
        android:layout_width="259dp"
        android:layout_height="238dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:text="@string/begin"
        android:textAlignment="textStart"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="412dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="100dp"
        android:gravity="center|center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:layout_marginStart="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp">

            <ImageView
                android:id="@+id/image_door1"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_closed_filled_rectangular_door"
                app:tint="#000000" />

            <ImageView
                android:id="@+id/image_cross1"
                android:layout_width="90dp"
                android:layout_height="130dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_x_mark"
                app:tint="#FF0000" />

            <ImageView
                android:id="@+id/image_coin1"
                android:layout_width="60dp"
                android:layout_height="130dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_gold_coin" />

            <ImageView
                android:id="@+id/image_donkey1"
                android:layout_width="100dp"
                android:layout_height="130dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_donkey" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:layout_marginStart="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp">

            <ImageView
                android:id="@+id/image_door2"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_closed_filled_rectangular_door"
                app:tint="#000000" />

            <ImageView
                android:id="@+id/image_cross2"
                android:layout_width="90dp"
                android:layout_height="130dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_x_mark"
                app:tint="#FF0000" />

            <ImageView
                android:id="@+id/image_coin2"
                android:layout_width="60dp"
                android:layout_height="130dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_gold_coin" />

            <ImageView
                android:id="@+id/image_donkey2"
                android:layout_width="100dp"
                android:layout_height="130dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_donkey" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:layout_marginStart="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp">

            <ImageView
                android:id="@+id/image_door3"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_closed_filled_rectangular_door"
                app:tint="#000000" />

            <ImageView
                android:id="@+id/image_cross3"
                android:layout_width="90dp"
                android:layout_height="130dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_x_mark"
                app:tint="#FF0000" />

            <ImageView
                android:id="@+id/image_coin3"
                android:layout_width="60dp"
                android:layout_height="130dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_gold_coin" />

            <ImageView
                android:id="@+id/image_donkey3"
                android:layout_width="100dp"
                android:layout_height="130dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_donkey" />
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        style="?android:attr/buttonBarStyle"
        android:layout_width="409dp"
        android:layout_height="54dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/button_door1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/door1" />

        <Button
            android:id="@+id/button_door2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/door2" />

        <Button
            android:id="@+id/button_door3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/door3" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/app_name"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/continueText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>